# backtest

./: .gitignore  README.md  pyproject.toml
craft/: __init__.py  metrics.py  registry.py  report.py  rules.py
src/convexpi/backtest/: __init__.py  bootstrap.py  costs.py  cv.py  data.py  forward.py  governance.py  holdout.py  leakage.py  manifest.py  metrics.py  overfitting.py  portfolio.py  registry.py  report.py  rules.py  splits.py
tests/: test_backtest.py  test_craft.py  test_framework.py
