[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "convexpi-craft"
version = "0.1.0"
description = "The Rules of the Craft, made executable: a thin discipline layer that makes honest-backtest habits mechanical (sealed holdout, time-aware splits, trial registry + deflated Sharpe, reproducibility manifest, six-question report card)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shane Conway", email = "shane.conway@gmail.com" }]
maintainers = [{ name = "Shane Conway", email = "shane.conway@gmail.com" }]
keywords = [
    "finance", "quantitative-finance", "machine-learning", "backtesting", "leakage",
    "deflated-sharpe", "multiple-testing", "walk-forward", "reproducibility", "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/convexpi/craft"
Repository = "https://github.com/convexpi/craft"
Issues = "https://github.com/convexpi/craft/issues"

[tool.setuptools]
packages = ["craft"]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
