[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "convexpi-backtest"
version = "0.2.0"
description = "A discipline-first backtesting framework: honest-evaluation guardrails (sealed holdout, time-aware and combinatorial-purged CV, deflated Sharpe / PBO, cost & capacity, leakage detectors, reproducibility manifest, backtest card)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shane Conway", email = "shane.conway@gmail.com" }]
maintainers = [{ name = "Shane Conway", email = "shane.conway@gmail.com" }]
keywords = [
    "finance", "quantitative-finance", "backtesting", "machine-learning", "leakage",
    "deflated-sharpe", "pbo", "combinatorial-purged-cv", "multiple-testing", "walk-forward",
    "market-impact", "reproducibility", "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/convexpi/backtest"
Repository = "https://github.com/convexpi/backtest"
Issues = "https://github.com/convexpi/backtest/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["convexpi.backtest"]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
